# wirelessHub

./: .gitignore  README.md  plan.md
daemon/: CMakeLists.txt
daemon/src/: Log.h  main.cpp
daemon/src/handlers/: PassthroughHandler.cpp  PassthroughHandler.h
daemon/src/network/: HubServer.cpp  HubServer.h  TapDevice.cpp  TapDevice.h  TcpSocket.cpp  TcpSocket.h  UdpSocket.cpp  UdpSocket.h
daemon/src/protocol/: Protocol.h
daemon/src/stub/: StubHandler.cpp  StubHandler.h
daemon/src/usbip/: UsbipParser.cpp  UsbipParser.h  VhciDriver.cpp  VhciDriver.h
daemon/tests/: WasdMouseTest.cpp
esp-codes/: CMakeLists.txt  sdkconfig.defaults
esp-codes/main/: CMakeLists.txt  app_main.c  crash_reporter.c  crash_reporter.h  device_session.c  device_session.h  eth_driver.c  eth_driver.h  eth_passthrough.c  eth_passthrough.h  hub_client.c  hub_client.h  log_forwarder.c  log_forwarder.h  server_cert.pem  server_key.pem  usb_driver.c  usb_driver.h  usb_passthrough.c  usb_passthrough.h  usbip_proto.h  wifi_manager.c  wifi_manager.h
